--- a/app/src/main/res/layout/item_materia.xml
+++ b/app/src/main/res/layout/item_materia.xml
@@ -33,12 +33,15 @@
                 android:orientation="horizontal">
 
                 <ImageView
+
                     android:id="@+id/imagen_materia_cardView"
+                    android:scaleType="centerCrop"
                     android:layout_width="100dp"
-                    android:layout_height="80dp"
+                    android:layout_height="100dp"
                     android:src="@mipmap/ic_launcher" />
 
                 <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
@@ -69,46 +72,8 @@
                         android:textSize="15sp"
 
                         />
-
-
                 </LinearLayout>
-
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/btn_eliminar_materia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginRight="1dp"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:background="@color/colorAccent"
-                    android:text="Eliminar"
-                    android:textAllCaps="false"
-                    android:textColor="@color/news_white" />
-
-                <Button
-                    android:id="@+id/btn_editar_materia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="1dp"
-                    android:layout_marginRight="1dp"
-                    android:layout_weight="1"
-                    android:layout_marginTop="5dp"
-                    android:background="@color/colorAccent"
-                    android:text="Editar"
-                    android:textAllCaps="false"
-                    android:textColor="@color/news_white" />
-
-            </LinearLayout>
-
-
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
